"use strict";
const bcrypt = require("bcrypt");
const { Model } = require("sequelize");

module.exports = (sequelize, DataTypes) => {
  class Dosen extends Model {
    static associate(models) {
      // Relasi dengan Mahasiswa (sebagai dosen pembimbing skripsi)
      Dosen.hasMany(models.Mahasiswa, {
        foreignKey: "dosen_pembimbing_skripsi_id",
        as: "mahasiswaBimbinganSkripsi",
      });

      // Relasi dengan Mahasiswa (sebagai dosen pembimbing akademik)
      Dosen.hasMany(models.Mahasiswa, {
        foreignKey: "dosen_pembimbing_akademik_id",
        as: "mahasiswaBimbinganAkademik",
      });

      // Relasi dengan Topik
      Dosen.hasMany(models.Topik, {
        foreignKey: "dosen_id",
        as: "topiks",
      });

      // Relasi many-to-many dengan Klaster Riset
      Dosen.belongsToMany(models.Klaster, {
        through: models.DosenKlaster,
        foreignKey: "dosen_id",
        otherKey: "klaster_id",
        as: "klasters",
      });

      Dosen.hasMany(models.DosenKlaster, {
        foreignKey: "dosen_id",
        as: "dosenKlasters",
      });

      Dosen.hasMany(models.IzinLanjutSkripsi, {
        foreignKey: "dosen_pembimbing_skripsi_id",
        as: "izinLanjutMahasiswa",
      });

      Dosen.hasMany(models.KlasterKetuaPeriode, {
        foreignKey: "dosen_id",
        as: "ketuaKlasterPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "ketua_itsc_dosen_id",
        as: "masterKetuaItscPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "ketua_sirkel_dosen_id",
        as: "masterKetuaSirkelPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "ketua_siber_dosen_id",
        as: "masterKetuaSiberPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "ketua_mvk_dosen_id",
        as: "masterKetuaMvkPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "pengawas_magang_dosen_id",
        as: "masterPengawasMagangPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "pengawas_pengabdian_dosen_id",
        as: "masterPengawasPengabdianPeriodes",
      });

      Dosen.hasMany(models.MasterPenanggungJawabPenjaluran, {
        foreignKey: "pengawas_perintisan_bisnis_dosen_id",
        as: "masterPengawasPerintisanBisnisPeriodes",
      });

      Dosen.hasMany(models.PeriodePenjaluran, {
        foreignKey: "ketua_penelitian_dosen_id",
        as: "periodeKetuaPenelitian",
      });

      Dosen.hasMany(models.PeriodePenjaluran, {
        foreignKey: "pengawas_magang_dosen_id",
        as: "periodePengawasMagang",
      });

      Dosen.hasMany(models.PeriodePenjaluran, {
        foreignKey: "pengawas_pengabdian_dosen_id",
        as: "periodePengawasPengabdian",
      });

      Dosen.hasMany(models.PeriodePenjaluran, {
        foreignKey: "pengawas_perintisan_bisnis_dosen_id",
        as: "periodePengawasPerintisanBisnis",
      });

      Dosen.hasMany(models.BimbinganSkripsi, {
        foreignKey: "dosen_id",
        as: "bimbinganSkripsis",
      });

      Dosen.hasMany(models.PendaftaranSidang, {
        foreignKey: "dosen_pembimbing_id",
        as: "pendaftaranSidangBimbingan",
      });

      Dosen.hasMany(models.KetersediaanPengujiSidang, {
        foreignKey: "dosen_id",
        as: "ketersediaanPengujiSidang",
      });

      Dosen.hasMany(models.PreferensiPengujiSidang, {
        foreignKey: "dosen_id",
        as: "preferensiPengujiSidang",
      });

      Dosen.hasMany(models.JadwalSidangPenguji, {
        foreignKey: "dosen_pembimbing_id",
        as: "jadwalSidangSebagaiPembimbing",
      });

      Dosen.hasMany(models.RiwayatStatusDosen, { foreignKey: "dosen_id", as: "riwayatStatus" });
      Dosen.hasMany(models.DosenKetersediaanPeriode, { foreignKey: "dosen_id", as: "ketersediaanPeriodes" });
      Dosen.hasMany(models.RiwayatKetersediaanMembimbing, { foreignKey: "dosen_id", as: "riwayatKetersediaanMembimbing" });
      Dosen.hasMany(models.TindakLanjutStatusDosen, { foreignKey: "dosen_id", as: "tindakLanjutStatus" });
      Dosen.hasMany(models.PenetapanPembimbingDosen, { foreignKey: "dosen_id", as: "keanggotaanPenetapanPembimbing" });

      Dosen.hasMany(models.JadwalSidangPenguji, {
        foreignKey: "penguji1_dosen_id",
        as: "jadwalSidangSebagaiPenguji1",
      });

      Dosen.hasMany(models.JadwalSidangPenguji, {
        foreignKey: "penguji2_dosen_id",
        as: "jadwalSidangSebagaiPenguji2",
      });
    }

    // Method untuk compare password
    async comparePassword(candidatePassword) {
      return await bcrypt.compare(candidatePassword, this.password);
    }

    // Method untuk cek apakah kuota masih tersedia
    async checkKuotaAvailable() {
      const { countActiveSupervisions } = require("../services/supervisorAccessService");
      const count = await countActiveSupervisions(this.id);
      return count < this.kuota_bimbingan;
    }

    // Method untuk mendapatkan sisa kuota
    async getSisaKuota() {
      const { countActiveSupervisions } = require("../services/supervisorAccessService");
      const count = await countActiveSupervisions(this.id);
      return this.kuota_bimbingan - count;
    }

    // Method untuk mendapatkan jumlah mahasiswa yang dibimbing
    async getJumlahMahasiswaDibimbing() {
      const { countActiveSupervisions } = require("../services/supervisorAccessService");
      return countActiveSupervisions(this.id);
    }

    // Method untuk mendapatkan info kuota lengkap
    async getKuotaInfo(transaction = null) {
      const { getActiveSupervisionLoad } = require("../services/supervisorAccessService");
      const load = await getActiveSupervisionLoad(this.id, transaction);
      const terpakai = Number(load.total || 0);
      const total = Number(this.kuota_bimbingan || 0);
      const sisa = Math.max(total - terpakai, 0);
      const persentase = total > 0 ? (terpakai / total) * 100 : 0;

      return {
        total,
        terpakai,
        sisa,
        persentase: Math.round(persentase),
        is_penuh: sisa <= 0,
        rincian_jalur: load.rincian_jalur,
      };
    }
  }

  Dosen.init(
    {
      kode_dosen: {
        type: DataTypes.STRING,
        allowNull: false,
        unique: true,
      },
      nik: {
        type: DataTypes.STRING(9),
        allowNull: true,
        unique: true,
      },
      nama: {
        type: DataTypes.STRING,
        allowNull: false,
      },
      gelar: {
        type: DataTypes.STRING,
        allowNull: true,
      },
      email: {
        type: DataTypes.STRING,
        allowNull: false,
        unique: true,
      },
      password: {
        type: DataTypes.STRING,
        allowNull: false,
      },
      is_default_password: {
        type: DataTypes.BOOLEAN,
        defaultValue: true,
      },
      credential_state: { type: DataTypes.STRING(20), allowNull: false, defaultValue: "default" },
      credential_version: { type: DataTypes.INTEGER, allowNull: false, defaultValue: 1 },
      password_changed_at: { type: DataTypes.DATE, allowNull: true }, password_origin: { type: DataTypes.STRING(30), allowNull: true },
      force_change_reason: { type: DataTypes.STRING(120), allowNull: true }, security_updated_at: { type: DataTypes.DATE, allowNull: true },
      security_updated_by_type: { type: DataTypes.STRING(30), allowNull: true }, security_updated_by_id: { type: DataTypes.INTEGER, allowNull: true },
      recovery_email_verified_at: { type: DataTypes.DATE, allowNull: true },
      recovery_email_verification_source: { type: DataTypes.STRING(80), allowNull: true },
      jabatan_struktural: {
        type: DataTypes.STRING,
        allowNull: true,
      },
      kuota_bimbingan: {
        type: DataTypes.INTEGER,
        allowNull: false,
        defaultValue: 5,
      },
      status_keaktifan: {
        type: DataTypes.ENUM("active", "inactive", "study_leave", "retired"),
        allowNull: false,
        defaultValue: "active",
      },
      account_is_active: { type: DataTypes.BOOLEAN, allowNull: false, defaultValue: true },
      continue_existing_supervision: { type: DataTypes.BOOLEAN, allowNull: false, defaultValue: true },
      status_effective_at: { type: DataTypes.DATEONLY, allowNull: true },
      status_reason: { type: DataTypes.TEXT, allowNull: true },
      status_updated_by: { type: DataTypes.INTEGER, allowNull: true },
      status_updated_at: { type: DataTypes.DATE, allowNull: true },
    },
    {
      sequelize,
      modelName: "Dosen",
      tableName: "Dosens",
      hooks: {
        beforeCreate: async (dosen) => {
          if (dosen.password) {
            const salt = await bcrypt.genSalt(10);
            dosen.password = await bcrypt.hash(dosen.password, salt);
          }
        },
        beforeUpdate: async (dosen) => {
          if (dosen.changed("password")) {
            const salt = await bcrypt.genSalt(10);
            dosen.password = await bcrypt.hash(dosen.password, salt);
          }
        },
      },
    }
  );

  return Dosen;
};

