// SIMPS BPMN V1.2 — TAHAP 02: Publikasi dan Validasi Topik Dosen
// Urutan BPMN: Dosen mempublikasikan topik → sistem menyimpan → ketua klaster/Sekprodi memvalidasi → topik tersedia untuk dipilih
// Biru = CURRENT (sudah ada) | Oranye = PROPOSED (belum dimigrasikan)
// View ini hanya menampilkan kolom penggerak relasi/proses agar diagram terbaca.

Project SIMPS_BPMN_02 {
  database_type: 'PostgreSQL'
  Note: 'Publikasi dan Validasi Topik Dosen'
}

Table Dosens [headercolor: #2F75B5] {
  id integer [pk, increment]
  kode_dosen varchar(255) [not null, unique]
  nama varchar(255) [not null]
  status_keaktifan varchar(30) [not null]
  account_is_active boolean [not null]
  kuota_bimbingan integer [not null]
  Note: 'CURRENT — dosen, pembimbing, penguji, dan penanggung jawab jalur'
}

Table SekretarisProdis [headercolor: #2F75B5] {
  id integer [pk, increment]
  nik varchar(9) [not null, unique]
  nama varchar(100) [not null]
  Note: 'CURRENT — sekretaris program studi'
}

Table PeriodePenjalurans [headercolor: #2F75B5] {
  id integer [pk, increment]
  label_periode varchar(50) [not null, unique]
  status varchar(20) [not null]
  Note: 'CURRENT — periode aktif'
}

Table Klasters [headercolor: #2F75B5] {
  id integer [pk, increment]
  kode varchar(20) [not null, unique]
  nama varchar(120) [not null, unique]
  Note: 'CURRENT — master klaster penelitian'
}

Table DosenKlasters [headercolor: #2F75B5] {
  dosen_id integer [pk, ref: > Dosens.id]
  klaster_id integer [pk, ref: > Klasters.id]
  Note: 'CURRENT — keanggotaan dosen pada klaster'
}

Table KlasterKetuaPeriodes [headercolor: #2F75B5] {
  id integer [pk, increment]
  klaster_id integer [not null, ref: > Klasters.id]
  dosen_id integer [not null, ref: > Dosens.id]
  periode_penjaluran_id integer [not null, ref: > PeriodePenjalurans.id]
  assigned_by_sekretaris_id integer [ref: > SekretarisProdis.id]
  Note: 'CURRENT — ketua klaster per periode'
}

Table Topiks [headercolor: #2F75B5] {
  id integer [pk, increment]
  kode varchar(20) [not null, unique]
  judul varchar(255) [not null]
  cluster varchar(20) [not null]
  status varchar(20) [not null]
  dosen_id integer [not null, ref: > Dosens.id]
  Note: 'CURRENT — topik publikasi dosen'
}

